// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphqlQueries mocks ABOUT_QUERY successfully 1`] = `
{
  "data": {
    "About": {
      "coloredSubhead": null,
      "image": {
        "alt": "Hello World",
        "height": 100,
        "id": "Hello World",
        "url": "Hello World",
        "width": 100,
      },
      "pets": {
        "athena": {
          "alt": "Hello World",
          "height": 100,
          "id": "Hello World",
          "url": "Hello World",
          "width": 100,
        },
        "harvey": {
          "alt": "Hello World",
          "height": 100,
          "id": "Hello World",
          "url": "Hello World",
          "width": 100,
        },
        "warren": {
          "alt": "Hello World",
          "height": 100,
          "id": "Hello World",
          "url": "Hello World",
          "width": 100,
        },
      },
      "text": null,
      "title": "Hello World",
    },
  },
  "errors": [
    [GraphQLError: No mock defined for type "JSON"],
    [GraphQLError: No mock defined for type "JSON"],
  ],
}
`;

exports[`graphqlQueries mocks CASE_STUDY_CONTENT_QUERY successfully 1`] = `
{
  "errors": [
    [GraphQLError: Variable "$slug" of required type "String!" was not provided.],
  ],
}
`;

exports[`graphqlQueries mocks NAV_QUERY successfully 1`] = `
{
  "data": {
    "Nav": {
      "footerCopyrightText": "Hello World",
      "menuItems": [
        {
          "customLabel": "Hello World",
          "overridePageName": false,
          "page": {
            "id": "Hello World",
            "slug": "Hello World",
            "title": "Hello World",
          },
        },
        {
          "customLabel": "Hello World",
          "overridePageName": false,
          "page": {
            "id": "Hello World",
            "slug": "Hello World",
            "title": "Hello World",
          },
        },
      ],
    },
  },
}
`;

exports[`graphqlQueries mocks PAGE_CONTENT_QUERY successfully 1`] = `
{
  "errors": [
    [GraphQLError: Variable "$slug" of required type "String!" was not provided.],
  ],
}
`;

exports[`graphqlQueries mocks PROJECT_CONTENT_QUERY successfully 1`] = `
{
  "errors": [
    [GraphQLError: Variable "$slug" of required type "String!" was not provided.],
  ],
}
`;

exports[`graphqlQueries mocks SLUG_QUERY successfully 1`] = `
{
  "data": {
    "CaseStudies": {
      "docs": [
        {
          "slug": "Hello World",
        },
        {
          "slug": "Hello World",
        },
      ],
    },
    "Pages": {
      "docs": [
        {
          "slug": "Hello World",
        },
        {
          "slug": "Hello World",
        },
      ],
    },
    "Projects": {
      "docs": [
        {
          "slug": "Hello World",
        },
        {
          "slug": "Hello World",
        },
      ],
    },
  },
}
`;

exports[`graphqlQueries mocks TESTIMONIALS_QUERY successfully 1`] = `
{
  "data": {
    "TestimonialListing": {
      "icon": {
        "alt": "Hello World",
        "height": 64,
        "id": "Hello World",
        "url": "Hello World",
        "width": 64,
      },
      "testimonials": null,
      "title": "Hello World",
    },
  },
  "errors": [
    [GraphQLError: No mock defined for type "JSON"],
  ],
}
`;

exports[`graphqlQueries mocks TOOLBOX_QUERY successfully 1`] = `
{
  "data": {
    "ToolboxListing": {
      "description": "Hello World",
      "icon": {
        "alt": "Hello World",
        "height": 64,
        "id": "Hello World",
        "url": "Hello World",
        "width": 64,
      },
      "title": "Hello World",
      "tools": [
        {
          "icon": {
            "alt": "Hello World",
            "height": 64,
            "id": "Hello World",
            "url": "Hello World",
            "width": 64,
          },
          "id": "Hello World",
          "title": "Hello World",
        },
        {
          "icon": {
            "alt": "Hello World",
            "height": 64,
            "id": "Hello World",
            "url": "Hello World",
            "width": 64,
          },
          "id": "Hello World",
          "title": "Hello World",
        },
      ],
    },
  },
}
`;
